--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,44 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Fjalla+One&family=Inter&family=Open+Sans&display=swap" rel="stylesheet">
-	
+
+	<link rel="stylesheet" href="css/style.min.css">
 	<title>Yota Appliance Repair</title>
 </head>
 <body>
-	
+	@@include('html/header.html')
+	<section class="promo">
+		<div class="container">
+				<div class="promo_title">
+					HOME APPLIANCE <span>REPAIR SERVICES</span>
+				</div>
+				<div class="promo_descr">
+					<p>YOTA Appliance Repair seek to provide best in class professional and transparent appliance repair services, to achieve so we guarantee an honest and upfront quote for the repair job, based on the expert assessment of the appliance and experience we got.</p> 
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="main" style="background-image: url('@img/bg-promo.png')">
+		<div class="container" >
+			<div class="main_form">
+				
+			</div>
+	</section>
+	<section class="services">
+		<div class="container">
+			<div class="title">Appliance Repair <span>IN HOUSTON</span> </div>
+			<div class="line"></div>
+			<div class="services_wrapper">
+				<div class="services_empty"></div>
+				<div class="services_descr">
+					<span>We are committed to provide excellent service to every customer with passion and dedication. YOTA appliance repair technicians are experienced and skilled to offer the best appliance repair service in Houston, along with free maintenance advice.</span>
+					<span>Thousands of satisfied customers we served are willing to recommend YOTA appliance repair to friends and family, making us the top household appliance service provider in Houston are.  YOTA appliance repair take the pride in the fact that our customers never regret choosing to work with us.</span>
+				</div>
+			</div>
+			<div class="line"></div>
+		</div>
+		
+	</section>
 </body>
+	@@include('html/footer.html')
 </html>
