Add sections services, about, contact, reviews

--- a/src/index.html
+++ b/src/index.html
@@ -33,9 +33,9 @@
 	</section>
 	<section class="services">
 		<div class="container">
-			<div class="title">Appliance Repair <span>IN HOUSTON</span> </div>
+			<h1 class="title"> <span>Appliance Repair</span> <br> IN HOUSTON </h1>
 			<div class="line"></div>
-			<div class="services_wrapper">
+			<div class="services_first">
 				<div class="services_empty"></div>
 				<div class="services_descr">
 					<span>We are committed to provide excellent service to every customer with passion and dedication. YOTA appliance repair technicians are experienced and skilled to offer the best appliance repair service in Houston, along with free maintenance advice.</span>
@@ -43,9 +43,248 @@
 				</div>
 			</div>
 			<div class="line"></div>
-		</div>
-		
+			<div class="services_second">
+				<div class="services_title">
+					<div class="title">Services</div>
+					<div class="subtitle">Appliance Repair</div>
+				</div>
+				<div class="services_list">
+					<div class="services_wrapper null_margin">
+					<div class="services_class">
+						<div class="services_subtitle">Kitchen appliance</div>
+						<img class="services_img" src="@img/refrig.png" alt="Refrigerator">
+					</div>
+					<div class="services_items">
+						<div class="services_item">
+							<div class="services_item_name">
+								<p class="services_item_subtitle">Refrigerator repair service</p>
+								<div class="services_item_plus"></div> 
+							</div>
+							<div class="services_item_descr">
+								<span>Refrigerators are one of the most used home appliances, thats why it is so important to have professional home appliance repair services in your area. Your refrigerator helps keep food fresh long enough, but as with many home appliances, it can fail you when you need it most. For example, it may decide to break down before a special occasion, resulting in huge losses due to all the food gone bad.</span>
+								<span>At YOTA Appliance Repair, we understand that refrigerators can fail you at any time, which is why we emphasize frequently getting your appliance serviced and maintained. Our team of appliance repair technicians will assess the issue with your refrigerator and fix it for you in no time. Some of the  repair issues we fix include a loud refrigerator, a broken ice maker, or a broken thermostat.</span>
+							</div>
+							<a class="button" href="#">read more</a>
+							<div class="line"></div>
+						</div>
+						<div class="services_item">
+							<div class="services_item_name">
+								<p class="services_item_subtitle">Freezer repair service</p>
+								<div class="services_item_plus"></div> 
+							</div>
+							<div class="services_item_descr">
+								<span>Refrigerators are one of the most used home appliances, thats why it is so important to have professional home appliance repair services in your area. Your refrigerator helps keep food fresh long enough, but as with many home appliances, it can fail you when you need it most. For example, it may decide to break down before a special occasion, resulting in huge losses due to all the food gone bad.</span>
+								<span>At YOTA Appliance Repair, we understand that refrigerators can fail you at any time, which is why we emphasize frequently getting your appliance serviced and maintained. Our team of appliance repair technicians will assess the issue with your refrigerator and fix it for you in no time. Some of the  repair issues we fix include a loud refrigerator, a broken ice maker, or a broken thermostat.</span>
+							</div>
+							<a class="button" href="#">read more</a>
+							<div class="line"></div>
+						</div>
+						<div class="services_item">
+							<div class="services_item_name">
+								<p class="services_item_subtitle">Dishwasher repair service</p>
+								<div class="services_item_plus"></div> 
+							</div>
+							<div class="services_item_descr">
+								<span>Refrigerators are one of the most used home appliances, thats why it is so important to have professional home appliance repair services in your area. Your refrigerator helps keep food fresh long enough, but as with many home appliances, it can fail you when you need it most. For example, it may decide to break down before a special occasion, resulting in huge losses due to all the food gone bad.</span>
+								<span>At YOTA Appliance Repair, we understand that refrigerators can fail you at any time, which is why we emphasize frequently getting your appliance serviced and maintained. Our team of appliance repair technicians will assess the issue with your refrigerator and fix it for you in no time. Some of the  repair issues we fix include a loud refrigerator, a broken ice maker, or a broken thermostat.</span>
+							</div>
+							<a class="button" href="#">read more</a>
+							<div class="line"></div>
+						</div>
+						<div class="services_item">
+							<div class="services_item_name">
+								<p class="services_item_subtitle">Wine cooler repair service</p>
+								<div class="services_item_plus"></div> 
+							</div>
+							<div class="services_item_descr">
+								<span>Refrigerators are one of the most used home appliances, thats why it is so important to have professional home appliance repair services in your area. Your refrigerator helps keep food fresh long enough, but as with many home appliances, it can fail you when you need it most. For example, it may decide to break down before a special occasion, resulting in huge losses due to all the food gone bad.</span>
+								<span>At YOTA Appliance Repair, we understand that refrigerators can fail you at any time, which is why we emphasize frequently getting your appliance serviced and maintained. Our team of appliance repair technicians will assess the issue with your refrigerator and fix it for you in no time. Some of the  repair issues we fix include a loud refrigerator, a broken ice maker, or a broken thermostat.</span>
+							</div>
+							<a class="button" href="#">read more</a>
+							<div class="line"></div>
+						</div>
+						<div class="services_item">
+							<div class="services_item_name">
+								<p class="services_item_subtitle">Oven repair service</p>
+								<div class="services_item_plus"></div> 
+							</div>
+							<div class="services_item_descr">
+								<span>Refrigerators are one of the most used home appliances, thats why it is so important to have professional home appliance repair services in your area. Your refrigerator helps keep food fresh long enough, but as with many home appliances, it can fail you when you need it most. For example, it may decide to break down before a special occasion, resulting in huge losses due to all the food gone bad.</span>
+								<span>At YOTA Appliance Repair, we understand that refrigerators can fail you at any time, which is why we emphasize frequently getting your appliance serviced and maintained. Our team of appliance repair technicians will assess the issue with your refrigerator and fix it for you in no time. Some of the  repair issues we fix include a loud refrigerator, a broken ice maker, or a broken thermostat.</span>
+							</div>
+							<a class="button" href="#">read more</a>
+							<div class="line"></div>
+						</div>
+						<div class="services_item">
+							<div class="services_item_name">
+								<p class="services_item_subtitle">Trash compactor repair service</p>
+								<div class="services_item_plus"></div> 
+							</div>
+							<div class="services_item_descr">
+								<span>Refrigerators are one of the most used home appliances, thats why it is so important to have professional home appliance repair services in your area. Your refrigerator helps keep food fresh long enough, but as with many home appliances, it can fail you when you need it most. For example, it may decide to break down before a special occasion, resulting in huge losses due to all the food gone bad.</span>
+								<span>At YOTA Appliance Repair, we understand that refrigerators can fail you at any time, which is why we emphasize frequently getting your appliance serviced and maintained. Our team of appliance repair technicians will assess the issue with your refrigerator and fix it for you in no time. Some of the  repair issues we fix include a loud refrigerator, a broken ice maker, or a broken thermostat.</span>
+							</div>
+							<a class="button" href="#">read more</a>
+							<div class="line"></div>
+						</div>
+						<div class="services_item">
+							<div class="services_item_name">
+								<p class="services_item_subtitle">Microwave repair service</p>
+								<div class="services_item_plus"></div> 
+							</div>
+							<div class="services_item_descr">
+								<span>Refrigerators are one of the most used home appliances, thats why it is so important to have professional home appliance repair services in your area. Your refrigerator helps keep food fresh long enough, but as with many home appliances, it can fail you when you need it most. For example, it may decide to break down before a special occasion, resulting in huge losses due to all the food gone bad.</span>
+								<span>At YOTA Appliance Repair, we understand that refrigerators can fail you at any time, which is why we emphasize frequently getting your appliance serviced and maintained. Our team of appliance repair technicians will assess the issue with your refrigerator and fix it for you in no time. Some of the  repair issues we fix include a loud refrigerator, a broken ice maker, or a broken thermostat.</span>
+							</div>
+							<a class="button" href="#">read more</a>
+						</div>
+					</div>
+					</div>
+					<div class="line"></div>
+					<div class="services_wrapper">
+						<div class="services_class">
+							<div class="services_subtitle">Laundry appliance</div>
+						</div>
+						<div class="services_items">
+							<div class="services_item">
+								<div class="services_item_name">
+									<p class="services_item_subtitle">Dryer repair service</p>
+									<div class="services_item_plus"></div> 
+								</div>
+								<div class="services_item_descr">
+									<span>Refrigerators are one of the most used home appliances, thats why it is so important to have professional home appliance repair services in your area. Your refrigerator helps keep food fresh long enough, but as with many home appliances, it can fail you when you need it most. For example, it may decide to break down before a special occasion, resulting in huge losses due to all the food gone bad.</span>
+									<span>At YOTA Appliance Repair, we understand that refrigerators can fail you at any time, which is why we emphasize frequently getting your appliance serviced and maintained. Our team of appliance repair technicians will assess the issue with your refrigerator and fix it for you in no time. Some of the  repair issues we fix include a loud refrigerator, a broken ice maker, or a broken thermostat.</span>
+								</div>
+								<a class="button" href="#">read more</a>
+								<div class="line"></div>
+							</div>
+							<div class="services_item">
+								<div class="services_item_name">
+									<p class="services_item_subtitle">Washing machine repair service</p>
+									<div class="services_item_plus"></div> 
+								</div>
+								<div class="services_item_descr">
+									<span>Refrigerators are one of the most used home appliances, thats why it is so important to have professional home appliance repair services in your area. Your refrigerator helps keep food fresh long enough, but as with many home appliances, it can fail you when you need it most. For example, it may decide to break down before a special occasion, resulting in huge losses due to all the food gone bad.</span>
+									<span>At YOTA Appliance Repair, we understand that refrigerators can fail you at any time, which is why we emphasize frequently getting your appliance serviced and maintained. Our team of appliance repair technicians will assess the issue with your refrigerator and fix it for you in no time. Some of the  repair issues we fix include a loud refrigerator, a broken ice maker, or a broken thermostat.</span>
+								</div>
+								<a class="button" href="#">read more</a>
+							</div>
+						</div>
+					</div>
+					<div class="line"></div>
+					<div class="services_wrapper">
+						<div class="services_class">
+							<div class="services_subtitle">Other appliances</div>
+						</div>
+						<div class="services_items">
+							<div class="services_item">
+								<div class="services_item_name">
+									<p class="services_item_subtitle">Range repair service</p>
+									<div class="services_item_plus"></div> 
+								</div>
+								<div class="services_item_descr">
+									<span>Refrigerators are one of the most used home appliances, thats why it is so important to have professional home appliance repair services in your area. Your refrigerator helps keep food fresh long enough, but as with many home appliances, it can fail you when you need it most. For example, it may decide to break down before a special occasion, resulting in huge losses due to all the food gone bad.</span>
+									<span>At YOTA Appliance Repair, we understand that refrigerators can fail you at any time, which is why we emphasize frequently getting your appliance serviced and maintained. Our team of appliance repair technicians will assess the issue with your refrigerator and fix it for you in no time. Some of the  repair issues we fix include a loud refrigerator, a broken ice maker, or a broken thermostat.</span>
+								</div>
+								<a class="button" href="#">read more</a>
+							</div>
+						</div>
+					</div>
+					<div class="line"></div>
+					<a class="button button_middle" href="#">Book a service</a>
+				</div>
+			</div>
+		</div>	
 	</section>
+	<section class="about">
+		<div class="container">
+			<div class="about_title">
+				<div class="title">about us</div>
+				<div class="subtitle">HOUSTON APPLIANCE REPAIR COMPANY</div>
+			</div>
+			<div class="line"></div>
+			<div class="about_images">
+				<img src="@img/wokers1.png" alt="workers1">
+				<img src="@img/wokers2.png" alt="workers2">
+			</div>
+			<div class="line"></div>
+				<div class="about_descr">
+					<div class="about_item">
+						<div class="about_item_title big_title">YOTA Appliance Repair is a leading appliance repair company in Houston. </div>
+						<div class="about_item_text compact_text">We are a locally-based, family-owned business that builds the local community in Northern Houston with professional and transparent appliance repair job.</div>
+					</div>
+					<div class="about_item">
+						<div class="about_item_title">YOTA Appliance Repair takes pride in being an integral part of the Houston community. </div>
+						<div class="about_item_text">We are a local-based company, and we recognize that our work bolsters the well-being of the local people. Our dedication to building our community pushes us to improve and expand our services to every home in the Houston area.
+							<br> <br> If any of your household appliances in Houston start malfunctioning, YOTA Appliance Repair aim to provide professional and cost-effective services tailored to your needs. Do not hesitate to book a service with us. We will surely give you services so good that you will tell others.</p> </div>
+					</div>
+					<div class="about_item">
+						<div class="about_item_title">YOTA Appliance repair is founded on passion, competence, and experience. </div>
+						<div class="about_item_text">We value the most: results, trust, mastery and opportunities. We strive to offer the best services to our customers in Woodlands, Kingwood and Spring. Yota Appliance Repair is dedicated to using all available resources to provide top-quality repairs and rectify faulty appliances.
+							<br> <br> The company has local experts that you can trust. We're grateful for the trust our customers have in us to keep their homes comfortable and their appliances running. All we care about is your comfort. For that reason, the company streamlines its services to guarantee 100% customer satisfaction.</div>
+					</div>
+				</div>
+			<div class="line"></div>
+			<a class="button button_large" href="#">book a service</a>
+		</div>
+	</section>
+	<section class="contact">
+		<div class="container">
+			<div class="title contact_title">CONTACT OUR SPECIALISTS</div>
+			<div class="line"></div>
+			<div class="contact_wrapper">
+				<div class="contact_images">
+					<img src="@img/fix.png" alt="fixing">
+					<img src="@img/dishwasher.png" alt="dishwasher">
+				</div>
+				<div class="contact_form">
+					<form id="form" action="#">
+						<div class="contact_form_title">Let’s work together!</div>
+						<div class="contact_form_item">
+							<input required type="text" name ="FullName" class="contact_form_input" placeholder="full name*">
+						</div>
+						<div class="contact_form_item">
+							<input required type="text" name ="email" class="contact_form_input" placeholder="email*">
+						</div>
+						<div class="contact_form_item">
+							<input required type="phone" name ="phone" class="contact_form_input" placeholder="phone*">
+						</div>
+						<div class="contact_form_item">
+							<input type="text" name ="about" class="contact_form_input" placeholder="inquiry about">
+						</div>
+						<button class="contact_form_button" type="submit">submit</button>
+					</form>
+				</div>
+			</div>
+			<div class="line"></div>
+		</div>
+	</section>
+	<section class="reviews">
+		<div class="container">
+			<div class="title">What Our Clients <br> & <span>PARTNERS Have <br> to Say</span></div>
+			<div class="carousel">
+				<div class="carousel_items">
+					<div class="carousel_item">
+						<div class="carousel_item_name">James Williams</div>
+						<div class="carousel_item_subtitle">Manager</div>
+						<div class="carousel_item_subtitle">Heating & Air</div>
+						<div class="carousel_item_text">From our very first interaction with BigCity, we were impressed. Everyone was extremely knowledgeable, thorough, friendly and honest. We entertained multiple HVAC companies to perform the services needed but BigCity’s experience was better than anyone else. They did a wonderful job. They are local and and very responsive.</div>
+					</div>
+					<div class="carousel_item">
+						<div class="carousel_item_name">James Williams</div>
+						<div class="carousel_item_subtitle">Manager</div>
+						<div class="carousel_item_subtitle">Heating & Air</div>
+						<div class="carousel_item_text">From our very first interaction with BigCity, we were impressed. Everyone was extremely knowledgeable, thorough, friendly and honest. We entertained multiple HVAC companies to perform the services needed but BigCity’s experience was better than anyone else. They did a wonderful job. They are local and and very responsive.</div>
+					</div>
+				</div>
+				<div class="carousel_control">
+					<div class="carousel_count">2\10</div>
+					<div class="carousel_arrows"> < > </div>
+				</div>
+			</div>
+		</div>
+	</section>
+
 </body>
 	@@include('html/footer.html')
 </html>
