Add sections: choice, brands, areas'

--- a/src/index.html
+++ b/src/index.html
@@ -277,14 +277,86 @@
 						<div class="carousel_item_text">From our very first interaction with BigCity, we were impressed. Everyone was extremely knowledgeable, thorough, friendly and honest. We entertained multiple HVAC companies to perform the services needed but BigCity’s experience was better than anyone else. They did a wonderful job. They are local and and very responsive.</div>
 					</div>
 				</div>
-				<div class="carousel_control">
-					<div class="carousel_count">2\10</div>
-					<div class="carousel_arrows"> < > </div>
+				<div class="carousel_arrows"> < > </div>
+			</div>
+		</div>
+	</section>
+	<section class="choice">
+		<div class="container">
+			<div class="title">Why Customers <br> Choose Us</div>
+			<div class="choice_items">
+				<div class="choice_item">
+					<img class="choice_item_icon" src="svgicons/Frame.svg" alt="frame">
+					<div class="choice_item_subtitle">Excellent Service</div>
+					<div class="choice_item_text">We do the job right the first time and with a smile on our faces. Only a sterling reputation in providing high-quality solutions of HVAC & Appliance services to our customers.</div>
+				</div>
+				<div class="choice_item item_top">
+					<img class="choice_item_icon" src="svgicons/Vector.svg" alt="vector">
+					<div class="choice_item_subtitle">Expert Technicians</div>
+					<div class="choice_item_text">Our team has certified and extensively trained technicians who have years of experience in troubleshooting even the most difficult HVAC and appliance problems.</div>
+				</div>
+				<div class="choice_item">
+					<img class="choice_item_icon" src="svgicons/Star.svg" alt="star">
+					<div class="choice_item_subtitle">Fully Insured</div>
+					<div class="choice_item_text">Our team is fully insured, licensed and highly trained to do comprehensive repairs. Only affordable upfront prices and a seamless customer experience.</div>
 				</div>
 			</div>
 		</div>
 	</section>
-
+	<section class="brands">
+		<div class="container">
+			<div class="title">We fix all makes <br> & <span>models</span></div>
+			<div class="brands_items">
+				<div class="brands_item"><img src="svgicons/brands/logo_1_maytag.svg" alt="logo_1_maytag"></div>
+				<div class="brands_item"><img src="svgicons/brands/logo_2_energy.svg" alt="general-electric"></div>
+				<div class="brands_item"><img src="svgicons/brands/logo_3_thermador.svg" alt="thermador"></div>
+				<div class="brands_item"><img src="svgicons/brands/logo_4_kenmore.svg" alt="kenmore"></div>
+				<div class="brands_item"><img src="svgicons/brands/logo_5_tappan.svg" alt="tappan"></div>
+				<div class="brands_item"><img src="svgicons/brands/logo_6_chef.svg" alt="magic-chef"></div>
+				<div class="brands_item"><img src="svgicons/brands/logo_7_lg.svg" alt="lg"></div>
+				<div class="brands_item"><img src="svgicons/brands/logo_8_jenn-air.svg" alt="jenn-air"></div>
+				<div class="brands_item"><img src="svgicons/brands/logo_9_fisher.svg" alt="fisher&paykel"></div>
+				<div class="brands_item"><img src="svgicons/brands/logo_10_bosch.svg" alt="bosch"></div>
+				<div class="brands_item"><img src="svgicons/brands/logo_11_dacor.svg" alt="dacor"></div>
+				<div class="brands_item"><img src="svgicons/brands/logo_12_decor.svg" alt="decor"></div>
+				<div class="brands_item"><img src="svgicons/brands/logo_13_samsung.svg" alt="samsung"></div>
+				<div class="brands_item"><img src="svgicons/brands/logo_14_electrolux.svg" alt="electrolux"></div>
+				<div class="brands_item"><img src="svgicons/brands/logo_15_amana.svg" alt="amana"></div>
+				<div class="brands_item"><img src="svgicons/brands/logo_16_speed.svg" alt="speed-queen"></div>
+				<div class="brands_item"><img src="svgicons/brands/logo_17_whirpool.svg" alt="whirpool"></div>
+				<div class="brands_item"><img src="svgicons/brands/logo_18_frigidaire.svg" alt="frigidaire"></div>
+				<div class="brands_item"><img src="svgicons/brands/logo_19_admiral.svg" alt="admiral"></div>
+				<div class="brands_item"><img src="svgicons/brands/logo_20_wolf.svg" alt="wolf"></div>
+				<div class="brands_item"><img src="svgicons/brands/logo_21_viking.svg" alt="viking"></div>
+				<div class="brands_item"><img src="svgicons/brands/logo_22_subzero.svg" alt="sub-zero"></div>
+				<div class="brands_item"><img src="svgicons/brands/logo_23_hotpoint.svg" alt="hotpoint"></div>
+				<div class="brands_item"><img src="svgicons/brands/logo_24_kitchenaid.svg" alt="KitchenAid"></div>
+			</div>
+			<div class="line"></div>
+		</div>
+	</section>
+	<section class="areas">
+		<div class="container">
+			<div class="areas_title">
+				<div class="title">AREAS WE <span>SERVE</span> </div>
+				<div class="subtitle">Service area</div>
+			</div>
+			<div class="areas_list">
+				<ol>
+					<li class="areas_city">Spring</li>
+					<li class="areas_city">Woodlands</li>
+					<li class="areas_city">Humble</li>
+					<li class="areas_city">Kingwood</li>
+					<li class="areas_city">Conroe</li>
+					<li class="areas_city">New Caney</li>
+					<li class="areas_city">Klein</li>
+					<li class="areas_city">Tomball</li>
+					<li class="areas_city">Cypress</li>
+					<li class="areas_city">Egypt</li>
+				</ol>
+			</div>
+		</div>
+	</section>
 </body>
 	@@include('html/footer.html')
 </html>
