--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,7 +1,7 @@
 <header class="header">
 	<div class="container">
 		<div class="logo">
-			<a href="#https://yoto.com#" class="logo_link"><img src="@img/Logo.png" alt="logo"></a>
+			<a href="#https://yoto.com#" class="logo_link"><img src="/svgicons/logo.svg" alt="logo"></a>
 		</div>
 		<div class="header_menu">
 			<ul class="menu">
