Added styles for all sections

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -8,8 +8,8 @@
 			</div>
 			<a href="#" class="mail_link">info_yota@gmail.com</a>
 			<div class="footer_social_icons">
-				<img src="../svgicons/fb.svg" alt="facebook">
-				<img src="../svgicons/inst.svg" alt="instagram">
+				<a href="#"><img src="../svgicons/fb.svg" alt="facebook"></a> 
+				<a href="#"><img src="../svgicons/inst.svg" alt="instagram"></a> 
 			</div>
 		</div>
 			<div class="footer_info">
