--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
 								<span>Refrigerators are one of the most used home appliances, thats why it is so important to have professional home appliance repair services in your area. Your refrigerator helps keep food fresh long enough, but as with many home appliances, it can fail you when you need it most. For example, it may decide to break down before a special occasion, resulting in huge losses due to all the food gone bad.</span>
 								<span>At YOTA Appliance Repair, we understand that refrigerators can fail you at any time, which is why we emphasize frequently getting your appliance serviced and maintained. Our team of appliance repair technicians will assess the issue with your refrigerator and fix it for you in no time. Some of the  repair issues we fix include a loud refrigerator, a broken ice maker, or a broken thermostat.</span>
 							</div>
-							<a class="button services_button" href="#">read more</a>
+							<a class="services_button" href="#">read more</a>
 							<div class="line"></div>
 						</div>
 						<div class="services_item">
@@ -87,10 +87,10 @@
 								<div class="services_item_plus"></div> 
 							</div>
 							<div class="services_item_descr">
-								<span>Much like the refrigerator, the freezer helps extend your food’s shelf life. This benefits your health, helps you save money, and provides you with overall comfort. The best thing about a freezer is that the food stays even longer than if it were in the refrigerator. But what happens when the freezer breaks down, and your food starts to rot? If your freezer isn’t working as it should, give us a call. Our appliance repair technician will do freezer repair services to ensure it continues running efficiently.</span>
-
+								<span>Much like the refrigerator, the freezer helps extend your food’s shelf life. This benefits your health, helps you save money, and provides you with overall comfort. The best thing about a freezer is that the food stays even longer than if it were in the refrigerator. But what happens when the freezer breaks down, and your food starts to rot? </span>
+								<span>If your freezer isn’t working as it should, give us a call. Our appliance repair technician will do freezer repair services to ensure it continues running efficiently.</span>
 							</div>
-							<a class="button services_button" href="#">read more</a>
+							<a class="services_button" href="#">read more</a>
 							<div class="line"></div>
 						</div>
 						<div class="services_item">
@@ -99,9 +99,10 @@
 								<div class="services_item_plus"></div> 
 							</div>
 							<div class="services_item_descr">
-								<span>A dishwasher is another essential appliance around the house. Everyone loves having clean dishes, so things can go into disarray if the dishwasher breaks down. If your dishwasher isn’t working well, contact YOTA HVAC & Appliance Repair service today to have our team of qualified home appliance repair professionals look into it. Alternatively, if you want to ensure your dishwasher serves you longer, our technicians can service it for you to check for any potential dishwasher repair issues and stop them before they happen.</span>
+								<span>A dishwasher is another essential appliance around the house. Everyone loves having clean dishes, so things can go into disarray if the dishwasher breaks down. If your dishwasher isn’t working well, contact YOTA HVAC & Appliance Repair service today to have our team of qualified home appliance repair professionals look into it. </span>
+								<span>Alternatively, if you want to ensure your dishwasher serves you longer, our technicians can service it for you to check for any potential dishwasher repair issues and stop them before they happen.</span>
 							</div>
-							<a class="button services_button" href="#">read more</a>
+							<a class="services_button" href="#">read more</a>
 							<div class="line"></div>
 						</div>
 						<div class="services_item">
@@ -112,7 +113,7 @@
 							<div class="services_item_descr">
 								<span>Chilled wine pairs well with a cheese board but still holds its own perfectly, which is why a wine cooler is essential in the house. If your wine cooler hasn’t been working as efficiently as you want it to, it’s time to bring in our technicians to check it out. Our skilled appliance repair professionals will diagnose the wine cooler issue, fix it, and have you drinking chilled wine in no time.</span>
 							</div>
-							<a class="button services_button" href="#">read more</a>
+							<a class="services_button" href="#">read more</a>
 							<div class="line"></div>
 						</div>
 						<div class="services_item">
@@ -123,7 +124,7 @@
 							<div class="services_item_descr">
 								<span>Every so often, your oven’s fan blades become dirty, thus limiting your appliance’s airflow. This, in turn, results in motor overheating, which becomes a fire hazard. Alternatively, your oven’s knobs and the door might get too hot, the appliance may burn the food, or the units adjacent may burn.If these sound like something you’re struggling with and need oven repair, get in touch with us today, and our appliance repair professionals will be happy to fix it for you.</span>
 							</div>
-							<a class="button services_button" href="#">read more</a>
+							<a class="services_button" href="#">read more</a>
 							<div class="line"></div>
 						</div>
 						<div class="services_item">
@@ -135,7 +136,7 @@
 								<span>Your trash compactor is your mini garbage truck. It helps you get rid of the garbage before you take it out, thus keeping your household clean. But what happens when the trash compactor stops working or keeps running? There are several answers to why your trash compactor will fail, but the most common one is the breakdown of some important parts.</span>
 								<span>This is why you need a trusted technician who can help you access the parts at an affordable price. At YOTA HVAC & Appliance Repair, our technicians will assess the situation, diagnose the problem and walk you through what needs to be done to get your trash compactor working again.</span>
 							</div>
-							<a class="button services_button" href="#">read more</a>
+							<a class="services_button" href="#">read more</a>
 							<div class="line"></div>
 						</div>
 						<div class="services_item">
@@ -146,7 +147,7 @@
 							<div class="services_item_descr">
 								<span>If your microwave’s door won’t shut properly, the interior light is malfunctioning, or the center plate won’t rotate, your microwave might need some TLC from YOTA HVAC & Appliance Repair professional technicians. With the right microwave repair and frequent service, your home appliance will last you for years to come without the prospect of replacing new parts or buying a new one.</span>
 							</div>
-							<a class="button services_button" href="#">read more</a>
+							<a class="services_button" href="#">read more</a>
 						</div>
 					</div>
 					</div>
@@ -165,7 +166,7 @@
 								<div class="services_item_descr">
 									<span>Always check your dryer for issues before looking for appliances repair services. Check if your electric switch tripped on the dryer or if the gas supply stopped. To keep your dryer running, clean the build-up channel after every session. However, if any of the methods highlighted don’t work, get in touch with us, and we will not hesitate to do dryer repairs for you.</span>
 								</div>
-								<a class="button services_button" href="#">read more</a>
+								<a class="services_button" href="#">read more</a>
 								<div class="line"></div>
 							</div>
 							<div class="services_item">
@@ -177,7 +178,7 @@
 									<span>Your washing machines might run into some trouble which might leave you on the outs for a while. If your washer doesn’t flush accurately, is leaking, or doesn’t run, you need to call home appliance repair service immediately. Otherwise, you risk running into bigger problems with it, which may cost you a lot of money in the long run. You may also end up having to buy a new one which may not be in your budget at the time.</span>
 									<span>At YOTA HVAC & Appliance Repair, we know how important your washer is and pride ourselves in providing efficient washing machine repair at a pocket-friendly price.</span>
 								</div>
-								<a class="button services_button" href="#">read more</a>
+								<a class="services_button" href="#">read more</a>
 							</div>
 						</div>
 					</div>
@@ -196,7 +197,7 @@
 								<div class="services_item_descr">
 									<span>A stove typically lasts you a maximum of 15 years if well taken care of. While stoves are usually very reliable, there’s no telling when an issue will arise. The most common stove issue is the failure to ignite, which might be frustrating. However, there’s nothing to worry about with the right technician working on it. Our home appliance repair technicians will fix the stove repair problem promptly and get you back to everyday cooking.</span>
 								</div>
-								<a class="button services_button" href="#">read more</a>
+								<a class="services_button" href="#">read more</a>
 							</div>
 						</div>
 					</div>
@@ -220,7 +221,7 @@
 			<div class="line"></div>
 				<div class="about_descr">
 					<div class="about_item">
-						<div class="about_item_title big_title">YOTA Appliance Repair is a leading appliance repair company in Houston. </div>
+						<div class="about_item_title big_title">YOTA Appliance Repair is a leading appliance <br>repair company in Houston. </div>
 						<div class="about_item_text compact_text">We are a locally-based, family-owned business that builds the local community in Northern Houston with professional and transparent appliance repair job.</div>
 					</div>
 					<div class="about_item">
