Added links for hedermenu and footer; added new images for services

--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -20,13 +20,13 @@
 					<li class="footer_phone">(619) 9883363</li>
 				</ul>
 				<ul class="footer_menu">
-					<li> <a href="#">home</a></li>
-					<li> <a href="#">appliance repair services</a></li>
-					<li> <a href="#">About us</a> </li>
+					<li> <a href="#header">home</a></li>
+					<li> <a href="#services">appliance repair services</a></li>
+					<li> <a href="#about">About us</a> </li>
 				</ul>
 				<ul class="footer_menu">
-					<li> <a href="#">service areas</a></li>
-					<li> <a href="#">contact us</a></li>
+					<li> <a href="#areas">service areas</a></li>
+					<li> <a href="#contacts">contact us</a></li>
 				</ul>
 			</div>
 			<div class="footer_authorship">
@@ -35,6 +35,5 @@
 			</div>
 		</div>
 		</div>
-
 	</div>
 </footer>
